tests/compliance/invalid/03-assert-fails.alp
!alp-version: 2.0.0

@project
  id: assert-fail
  status: development

!assert: status == "production"
